and makes them available separately. See "HOL/ex/Induction_Scheme.thy"
for examples,

* Records. Removed K_record, and replaced it by pure lambda term
%x. c. The simplifier setup is now more robust against eta expansion.
INCOMPATIBILITY: in cases explicitly referring to K_record.

* Metis prover is now an order of magnitude faster, and also works
with multithreading.


*** ZF ***

* Renamed theories:

  Datatype.thy  -> Datatype_ZF.thy
  Inductive.thy -> Inductive_ZF.thy
  Int.thy       -> Int_ZF.thy
  IntDiv.thy    -> IntDiv_ZF.thy
  Nat.thy       -> Nat_ZF.thy
  List.thy      -> List_ZF.thy
  Main.thy      -> Main_ZF.thy

 This is to allow to load both ZF and HOL in the same session.

 INCOMPATIBILITY: ZF theories that import individual theories below
 Main might need to be adapted. For compatibility, a new 
 "theory Main imports Main_ZF begin end" is provided, so if you just
 imported "Main", no changes are needed.


*** ML ***

* ML within Isar: antiquotation @{const name} or @{const
name(typargs)} produces statically-checked Const term.

* The ``print mode'' is now a thread-local value derived from a global
template (the former print_mode reference), thus access becomes
non-critical.  The global print_mode reference is for session
management only; user-code should use print_mode_value,
print_mode_active, PrintMode.setmp etc.  INCOMPATIBILITY.

* system/system_out provides a robust way to invoke external shell
commands, with propagation of interrupts (after Poly/ML 5.2).  Do not
use OS.Process.system etc. directly.


*** System ***

* System: removed obsolete THIS_IS_ISABELLE_BUILD feature.  NB: the
documented way of changing the user's settings is via
ISABELLE_HOME_USER/etc/settings, which is a fully featured bash
script.

* Default settings: PROOFGENERAL_OPTIONS no longer impose xemacs ---
in accordance with Proof General 3.7, which prefers GNU emacs.

* Multithreading.max_threads := 0 refers to the number of actual CPU